--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -1,3 +1,5 @@
-add_subdirectory(terminal)
+add_subdirectory(deskbar)
+#add_subdirectory(deskcalc)
 add_subdirectory(osutils)
+add_subdirectory(terminal)
 add_subdirectory(testharness)
