--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_subdirectory(deskbar)
 #add_subdirectory(deskcalc)
 add_subdirectory(osutils)
+add_subdirectory(sudoku)
 add_subdirectory(terminal)
 add_subdirectory(testharness)
