--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -1,6 +1,7 @@
 add_subdirectory(clock)
 add_subdirectory(deskbar)
 #add_subdirectory(deskcalc)
+add_subdirectory(pairs)
 add_subdirectory(osutils)
 add_subdirectory(sudoku)
 add_subdirectory(terminal)
