--- a/src/apps/CMakeLists.txt
+++ b/src/apps/CMakeLists.txt
@@ -3,6 +3,7 @@ add_subdirectory(deskbar)
 #add_subdirectory(deskcalc)
 add_subdirectory(pairs)
 add_subdirectory(osutils)
+add_subdirectory(stylededit)
 add_subdirectory(sudoku)
 add_subdirectory(terminal)
 add_subdirectory(testharness)
