--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,7 +1,9 @@
 add_subdirectory(system)
 
-add_subdirectory(kits)
+add_subdirectory(bin)
 add_subdirectory(libs)
+
+add_subdirectory(kits)
 add_subdirectory(servers)
 
 add_subdirectory(apps)
