--- a/src/bin/rc/CMakeLists.txt
+++ b/src/bin/rc/CMakeLists.txt
@@ -1,17 +1,18 @@
 find_package(BISON)
 find_package(FLEX)
 
-BISON_TARGET(parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cc)
-FLEX_TARGET(lexer lexer.l  ${CMAKE_CURRENT_BINARY_DIR}/lexer.cc)
+BISON_TARGET(parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp)
+FLEX_TARGET(lexer lexer.l  ${CMAKE_CURRENT_BINARY_DIR}/lexer.cpp)
 
 add_executable(rc
+	rc.cpp
+
 	${BISON_parser_OUTPUTS}
 	${FLEX_lexer_OUTPUTS}
 	compile.cpp
 	decompile.cpp
 	rdef.cpp
 )
-
 
 target_link_libraries(rc PRIVATE be root ${FLEX_LIBRARIES} ${BISON_LIBRARIES})
 
