--- a/src/apps/deskbar/CMakeLists.txt
+++ b/src/apps/deskbar/CMakeLists.txt
@@ -1,4 +1,7 @@
-add_executable(Deskbar
+Application(
+	Deskbar
+
+	SOURCES
 	BarApp.cpp
 	BarMenuBar.cpp
 	BarMenuTitle.cpp
@@ -21,18 +24,16 @@ add_executable(Deskbar
 	WindowMenuItem.cpp
 	ResourceSet.cpp
 	Switcher.cpp
+
+	LIBS tracker
+
+	INCLUDES
+	"../../../headers/private/interface/"
 )
+
+add_definitions(-DDB_ADDONS -D_INCLUDES_CLASS_DEVICE_MAP=1)
 
 #-D_SHOW_CALENDAR_MENU_WINDOW=1 -DMOUNT_MENU_IN_DESKBAR=1 
 # -DDB_ADDONS -D_INCLUDES_CLASS_DEVICE_MAP=1
 #	-D_SUPPORTS_RESOURCES=1
 #	-D_SUPPORTS_FEATURE_SCRIPTING=1 ;
-
-add_definitions(-DDB_ADDONS -D_INCLUDES_CLASS_DEVICE_MAP=1)
-
-target_link_libraries(Deskbar PRIVATE be root tracker)
-
-target_include_directories(Deskbar PRIVATE
-	"../../../headers/private/interface/"
-	"./"
-)
