--- a/src/apps/osutils/CMakeLists.txt
+++ b/src/apps/osutils/CMakeLists.txt
@@ -1,20 +1,9 @@
-add_executable(portinfo
-	portinfo.cpp
-)
-
-target_link_libraries(portinfo PRIVATE be root)
-
-target_include_directories(portinfo PRIVATE
+Application(portinfo SOURCES portinfo.cpp
+	INCLUDES
 	"../../../headers/private/libroot/"
 )
 
-
-add_executable(seminfo
-	seminfo.cpp
-)
-
-target_link_libraries(seminfo PRIVATE be root)
-
-target_include_directories(seminfo PRIVATE
+Application(seminfo SOURCES seminfo.cpp
+	INCLUDES
 	"../../../headers/private/libroot/"
 )
