--- a/src/bin/rc/CMakeLists.txt
+++ b/src/bin/rc/CMakeLists.txt
@@ -4,19 +4,20 @@ find_package(FLEX)
 BISON_TARGET(parser parser.y ${CMAKE_CURRENT_BINARY_DIR}/parser.cpp)
 FLEX_TARGET(lexer lexer.l  ${CMAKE_CURRENT_BINARY_DIR}/lexer.cpp)
 
-add_executable(rc
+Application(rc
 	rc.cpp
 
+	SOURCES
 	${BISON_parser_OUTPUTS}
 	${FLEX_lexer_OUTPUTS}
 	compile.cpp
 	decompile.cpp
 	rdef.cpp
-)
 
-target_link_libraries(rc PRIVATE be root ${FLEX_LIBRARIES} ${BISON_LIBRARIES})
+	LIBS
+	${FLEX_LIBRARIES}
+	${BISON_LIBRARIES}
 
-target_include_directories(rc PRIVATE
-	"./"
+	INCLUDES
 	${CMAKE_CURRENT_BINARY_DIR}
 )
