--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -18,6 +18,8 @@ jobs:
     - name: mkdir
       run: mkdir generated.x86
     - name: configure
+      run: cd generated.x86 && git submodule update --init --recursive ../
+    - name: configure
       run: cd generated.x86 && ../cmake-3.13.4-Linux-x86_64/bin/cmake .. -GNinja
     - name: ninja
       run: cd generated.x86 && ninja
