--- a/src/kits/support/CMakeLists.txt
+++ b/src/kits/support/CMakeLists.txt
@@ -27,3 +27,32 @@ target_sources(be PRIVATE
 	ZlibCompressionAlgorithm.cpp
 	ZstdCompressionAlgorithm.cpp
 )
+
+target_sources(be_bootstrap PRIVATE
+	Architecture.cpp
+	Archivable.cpp
+	ArchivingManagers.cpp
+	Base64.cpp
+	Beep.cpp
+	BlockCache.cpp
+	BufferedDataIO.cpp
+	BufferIO.cpp
+	ByteOrder.cpp
+	CompressionAlgorithm.cpp
+	DataIO.cpp
+	DataPositionIOWrapper.cpp
+	DateTime.cpp
+	Flattenable.cpp
+	Job.cpp
+	JobQueue.cpp
+	List.cpp
+	Locker.cpp
+	PointerList.cpp
+	Referenceable.cpp
+	StopWatch.cpp
+	String.cpp
+	StringList.cpp
+	Uuid.cpp
+	ZlibCompressionAlgorithm.cpp
+	ZstdCompressionAlgorithm.cpp
+)
