--- a/src/system/CMakeLists.txt
+++ b/src/system/CMakeLists.txt
@@ -2,11 +2,7 @@ AddOn(
 	root
 	SHARED
 
-	LIBS
-	rt
-	dl
-	pthread
-	${ZLIB_LIBRARIES}
+	LIBS be_bootstrap rt dl pthread ${ZLIB_LIBRARIES}
 )
 
 add_subdirectory(kernel_linux)
