Thread: Major refactor to increase readability and flexibility

--- a/src/system/kernel_linux/CMakeLists.txt
+++ b/src/system/kernel_linux/CMakeLists.txt
@@ -17,7 +17,7 @@ target_sources(root PRIVATE
 	scheduler.cpp
 	sem.c
 	Team.cpp
-	thread.cpp
+	Thread.cpp
 	timer.cpp
 	wait_for_objects.cpp
 	libc.c
