tests: Add interface/Look test

--- a/src/tests/kits/interface/CMakeLists.txt
+++ b/src/tests/kits/interface/CMakeLists.txt
@@ -4,3 +4,14 @@ add_executable(ScreenTest
 )
 
 target_link_libraries(ScreenTest PRIVATE be root)
+
+Application(
+	LookTest
+
+	SOURCES
+	look/Look.cpp
+	INCLUDES
+	"../../../../headers/private/interface"
+)
+
+target_link_libraries(LookTest PRIVATE tracker)
