Add team information functions

--- a/src/tests/vos/testharness/CMakeLists.txt
+++ b/src/tests/vos/testharness/CMakeLists.txt
@@ -4,4 +4,5 @@ Application(testports SOURCES testports.cpp)
 Application(testsem SOURCES testsem.cpp)
 Application(tessempingpong SOURCES testsempingpong.cpp)
 Application(testthread SOURCES testthread.cpp)
+Application(testteam SOURCES testteam.cpp)
 Application(testfsinfo SOURCES main.cpp)
