New tests: app, net, storage, support

--- a/src/tests/kits/CMakeLists.txt
+++ b/src/tests/kits/CMakeLists.txt
@@ -1,2 +1,6 @@
 add_subdirectory(app)
 add_subdirectory(interface)
+#add_subdirectory(storage)
+add_subdirectory(support)
+#add_subdirectory(net)
+add_subdirectory(media)
