--- a/src/tests/kits/app/CMakeLists.txt
+++ b/src/tests/kits/app/CMakeLists.txt
@@ -1,1 +1,5 @@
+include_directories("../../../../headers/private/app")
+
 add_subdirectory(messaging)
+add_subdirectory(bmessenger)
+#Test (DanoMessageTest SOURCES DanoMessageTest.cpp)
