--- a/src/tests/kits/interface/CMakeLists.txt
+++ b/src/tests/kits/interface/CMakeLists.txt
@@ -1,9 +1,46 @@
+include_directories("../../../../headers/private/interface")
 
-add_executable(ScreenTest
-	ScreenTest.cpp
-)
+Test (SimpleAlertTest SOURCES SimpleAlertTest.cpp)
 
-target_link_libraries(ScreenTest PRIVATE be root)
+Test (ChannelSliderTest SOURCES ChannelSliderTest.cpp)
+
+#Test (CheckBoxTest SOURCES CheckBoxTest.cpp)
+
+Test (ControlLookTest SOURCES ControlLookTest.cpp)
+
+Test (DrawBitmapTest SOURCES bbitmap/DrawBitmapTest.cpp)
+
+Test (ListViewTest SOURCES ListViewTest.cpp)
+
+Test (ScreenTest SOURCES ScreenTest.cpp)
+
+Test (ScrollViewTest SOURCES ScrollViewTest.cpp)
+
+Test (StatusBarTest SOURCES StatusBarTest.cpp)
+
+Test (ToolTipTest SOURCES ToolTipTest.cpp)
+
+#Test (GetMouseTest SOURCES GetMouseTest.cpp)
+
+Test (PulseTest SOURCES PulseTest.cpp)
+
+Test (SliderTest SOURCES SliderTest.cpp)
+
+Test (TruncateString SOURCES TruncateString.cpp)
+
+Test (MenuBeginningTest SOURCES MenuBeginningTest.cpp)
+
+#Test (WidthBufferTest SOURCES WidthBufferTest.cpp)
+
+Test (ClippingPlusRedraw SOURCES ClippingPlusRedraw.cpp)
+
+Test (SetDiskModeTest SOURCES SetDiskModeTest.cpp)
+
+#Test (ScrollViewSetBorderTest SOURCES ScrollViewSetBorderTest.cpp)
+
+Test (TextViewTestManual SOURCES TextViewTestManual.cpp)
+
+Test (WindowStackTest SOURCES bwindowstack/WindowStackTest.cpp)
 
 Application(
 	LookTest
