buildsystem: Introduce UsePrivateHeaders

--- a/src/apps/deskbar/CMakeLists.txt
+++ b/src/apps/deskbar/CMakeLists.txt
@@ -26,10 +26,9 @@ Application(
 	Switcher.cpp
 
 	LIBS tracker
-
-	INCLUDES
-	"../../../headers/private/interface/"
 )
+
+UsePrivateHeaders( Deskbar interface )
 
 add_definitions(-DDB_ADDONS -D_INCLUDES_CLASS_DEVICE_MAP=1)
 
