--- a/src/apps/osutils/CMakeLists.txt
+++ b/src/apps/osutils/CMakeLists.txt
@@ -1,9 +1,5 @@
-Application(portinfo SOURCES portinfo.cpp
-	INCLUDES
-	"../../../headers/private/libroot/"
-)
+Application(portinfo SOURCES portinfo.cpp)
+UsePrivateHeaders( portinfo libroot )
 
-Application(seminfo SOURCES seminfo.cpp
-	INCLUDES
-	"../../../headers/private/libroot/"
-)
+Application(seminfo SOURCES seminfo.cpp)
+UsePrivateHeaders( seminfo libroot )
