--- a/src/kits/textencoding/CMakeLists.txt
+++ b/src/kits/textencoding/CMakeLists.txt
@@ -5,6 +5,4 @@ target_sources(be PRIVATE
 	utf8_conversions.cpp
 )
 
-target_include_directories(be PRIVATE
-	"../../../headers/private/textencoding/"
-)
+UsePrivateHeaders( be textencoding )
