--- a/src/apps/terminal/CMakeLists.txt
+++ b/src/apps/terminal/CMakeLists.txt
@@ -38,7 +38,6 @@ Application(
 	LIBS
 	tracker
 	pthread
-
-	INCLUDES
-	"../../../headers/private/textencoding/"
 )
+
+UsePrivateHeaders( Terminal textencoding )
