fs: Rewrite fs_info and complete it

--- a/src/tests/vos/testharness/CMakeLists.txt
+++ b/src/tests/vos/testharness/CMakeLists.txt
@@ -4,3 +4,4 @@ Application(testports SOURCES testports.cpp)
 Application(testsem SOURCES testsem.cpp)
 Application(tessempingpong SOURCES testsempingpong.cpp)
 Application(testthread SOURCES testthread.cpp)
+Application(testfsinfo SOURCES main.cpp)
