Add bin commands

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -2,3 +2,13 @@ add_subdirectory(addattr)
 #add_subdirectory(desklink)
 add_subdirectory(rc)
 
+Application(catattr SOURCES catattr.cpp)
+Application(hey SOURCES hey.cpp)
+Application(listattr SOURCES listattr.cpp)
+Application(mvattr SOURCES mvattr.cpp)
+Application(query SOURCES query.cpp)
+Application(rmattr SOURCES rmattr.cpp)
+Application(setmime SOURCES setmime.cpp)
+Application(shutdown SOURCES shutdown.cpp)
+Application(system_time SOURCES system_time.cpp)
+Application(xres SOURCES xres.cpp)
