Add new bin commands (#36)
* Add bin commands

* Add bin commands

* Add bin commands

* Update ccpp.yml

Add libncurses-dev as dependency

* Update README.md

Add libncurses-dev as dependency

* Add new bin commands

Co-authored-by: Barrett17 <Barrett17@users.noreply.github.com>

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -2,3 +2,24 @@ add_subdirectory(addattr)
 #add_subdirectory(desklink)
 add_subdirectory(rc)
 
+Application(catarea SOURCES catarea.c)
+Application(catattr SOURCES catattr.cpp)
+Application(copyattr SOURCES copyattr.cpp)
+#Application(filepanel SOURCES filepanel.cpp)
+Application(finddir SOURCES finddir.c)
+Application(hey SOURCES hey.cpp)
+Application(listarea SOURCES listarea.c)
+Application(listattr SOURCES listattr.cpp)
+Application(listres SOURCES listres.cpp)
+Application(lsindex SOURCES lsindex.cpp)
+Application(mkindex SOURCES mkindex.cpp)
+Application(mvattr SOURCES mvattr.cpp)
+Application(query SOURCES query.cpp)
+Application(reindex SOURCES reindex.cpp)
+Application(rmattr SOURCES rmattr.cpp)
+Application(rmindex SOURCES rmindex.cpp)
+Application(setmime SOURCES setmime.cpp)
+Application(shutdown SOURCES shutdown.cpp)
+Application(system_time SOURCES system_time.cpp)
+Application(watch SOURCES watch.c LIBS ncurses)
+Application(xres SOURCES xres.cpp)
