--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -2,8 +2,12 @@ add_subdirectory(addattr)
 #add_subdirectory(desklink)
 add_subdirectory(rc)
 
-Application(catattr SOURCES catattr.cpp)
+Application(catarea SOURCES catarea.c)
+Application(copyattr SOURCES copyattr.cpp)
+Application(listarea SOURCES listarea.c)
+Application(finddir SOURCES finddir.c)
 Application(hey SOURCES hey.cpp)
+Application(listarea.c SOURCES listarea.c)
 Application(listattr SOURCES listattr.cpp)
 Application(mvattr SOURCES mvattr.cpp)
 Application(query SOURCES query.cpp)
@@ -11,4 +15,5 @@ Application(rmattr SOURCES rmattr.cpp)
 Application(setmime SOURCES setmime.cpp)
 Application(shutdown SOURCES shutdown.cpp)
 Application(system_time SOURCES system_time.cpp)
+Application(watch SOURCES watch.c LIBS ncurses)
 Application(xres SOURCES xres.cpp)
