Add bin commands

--- a/src/bin/CMakeLists.txt
+++ b/src/bin/CMakeLists.txt
@@ -3,11 +3,11 @@ add_subdirectory(addattr)
 add_subdirectory(rc)
 
 Application(catarea SOURCES catarea.c)
+Application(catattr SOURCES catattr.cpp)
 Application(copyattr SOURCES copyattr.cpp)
-Application(listarea SOURCES listarea.c)
 Application(finddir SOURCES finddir.c)
 Application(hey SOURCES hey.cpp)
-Application(listarea.c SOURCES listarea.c)
+Application(listarea SOURCES listarea.c)
 Application(listattr SOURCES listattr.cpp)
 Application(mvattr SOURCES mvattr.cpp)
 Application(query SOURCES query.cpp)
