buildsystem: add/remove flags

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,11 +36,12 @@ set(COMMON_FLAGS "-include LinuxBuildCompatibility.h -Wall \
 	-Wpointer-arith -Wcast-align -Wsign-compare -Wstrict-aliasing \
 	-Wno-multichar -fPIC ${DIAG_FLAGS}")
 
+# TODO: We want ideally to remove -Wno-deprecated at some point
 # Set flags.
 set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${COMMON_FLAGS}")
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${COMMON_FLAGS} \
 	-Woverloaded-virtual -Wno-ctor-dtor-privacy \
-	-Wnon-virtual-dtor -fexceptions -fpermissive")
+	-fexceptions -fpermissive -Wno-deprecated")
 
 # Goal is to work without libctdc++ installed
 set(CMAKE_CXX_IMPLICIT_LINK_LIBRARIES "libc")
