--- a/src/tests/kits/storage/CMakeLists.txt
+++ b/src/tests/kits/storage/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories("../../../../headers/private/storage")
+UsePrivateHeaders(GLOBAL storage)
 
 add_subdirectory(testapps)
 add_subdirectory(virtualdrive)
