--- a/src/tests/kits/support/CMakeLists.txt
+++ b/src/tests/kits/support/CMakeLists.txt
@@ -1,4 +1,4 @@
-include_directories("../../../../headers/private/support/")
+UsePrivateHeaders(GLOBAL support)
 
-Test (compression_test SOURCES compression_test.cpp)
-Test (string_utf8_tests SOURCES string_utf8_tests.cpp)
+Test(compression_test SOURCES compression_test.cpp)
+Test(string_utf8_tests SOURCES string_utf8_tests.cpp)
