--- a/src/tests/kits/net/CMakeLists.txt
+++ b/src/tests/kits/net/CMakeLists.txt
@@ -1,6 +1,6 @@
-include_directories("../../../../headers/private/net")
+UsePrivateHeaders(GLOBAL net)
 
 add_subdirectory(service)
 
-Test (NetAddressTest SOURCES NetAddressTest.cpp)
+Test(NetAddressTest SOURCES NetAddressTest.cpp)
 Test (NetEndpointTest SOURCES NetEndpointTest.cpp)
