--- a/src/kits/tracker/CMakeLists.txt
+++ b/src/kits/tracker/CMakeLists.txt
@@ -92,4 +92,4 @@ AddOn(
 	root
 )
 
-UsePrivateHeaders( tracker interface shared tracker mount storage )
+UsePrivateHeaders(tracker interface shared tracker mount storage support)
