buildsystem: Initial prototype for system packages

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -159,3 +159,5 @@ include(build/engine.cmake)
 # Sub directories
 #add_subdirectory(headers)
 add_subdirectory(src)
+
+include(build/packages.cmake)
