--- a/src/servers/app/CMakeLists.txt
+++ b/src/servers/app/CMakeLists.txt
@@ -114,7 +114,7 @@ Server(
 	stackandtile/Stacking.cpp
 	stackandtile/Tiling.cpp
 
-	LIBS be root freetype agg icon linprog input udev
+	LIBS be root localestub freetype agg icon linprog input udev
 
 	INCLUDES
 	"./drawing"
