--- a/src/apps/deskbar/CMakeLists.txt
+++ b/src/apps/deskbar/CMakeLists.txt
@@ -1,3 +1,10 @@
+add_definitions(-DDB_ADDONS -D_INCLUDES_CLASS_DEVICE_MAP=1
+	-D_SHOW_CALENDAR_MENU_WINDOW=1 -DMOUNT_MENU_IN_DESKBAR=1
+	-DDB_ADDONS -D_INCLUDES_CLASS_DEVICE_MAP=1
+	-D_SUPPORTS_RESOURCES=1
+	-D_SUPPORTS_FEATURE_SCRIPTING=1
+)
+
 Application(
 	Deskbar
 
@@ -30,10 +37,3 @@ Application(
 )
 
 UsePrivateHeaders(Deskbar app interface)
-
-add_definitions(-DDB_ADDONS -D_INCLUDES_CLASS_DEVICE_MAP=1)
-
-#-D_SHOW_CALENDAR_MENU_WINDOW=1 -DMOUNT_MENU_IN_DESKBAR=1 
-# -DDB_ADDONS -D_INCLUDES_CLASS_DEVICE_MAP=1
-#	-D_SUPPORTS_RESOURCES=1
-#	-D_SUPPORTS_FEATURE_SCRIPTING=1 ;
